# letterboxd

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml
apps/films/: admin.py  apps.py  forms.py  models.py  tmdb_client.py  urls.py  views.py
apps/films/management/commands/: import_tmdb.py  populate_slugs.py
apps/films/migrations/: 0001_initial.py  0002_review.py  0003_alter_actor_image_alter_director_image_and_more.py  0004_remove_film_cast_actor_films_director_films_and_more.py  0005_alter_actor_image_alter_director_image_and_more.py  0006_alter_film_rating.py  0007_alter_actor_image_alter_director_image_and_more.py  0008_alter_actor_image_alter_director_image_and_more.py
apps/films/templates/films/: actor_detail.html  director_detail.html  film_detail.html  films.html  home.html  home_guest.html  review_film.html  review_list.html  search_results.html
apps/profiles/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/profiles/templates/profiles/: create_profile.html  delete_review.html  edit_profile.html  profile.html  (+6 more)
bruno/Letterboxd/: bruno.json  genre create.bru  genre delete.bru  genre update.bru  genres.bru  movie create.bru  movie delete.bru  movie update partial.bru  movie update.bru  movies.bru  user create.bru  user delete.bru  user detail.bru  user update partial.bru  user update.bru  users.bru
config/: settings.py  urls.py
letterboxd/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
letterboxd/migrations/: 0001_initial.py
static/: main.css
