[project]
name = "letterboxd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "cryptography>=46.0.3",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "dotenv>=0.9.9",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "tmdbv3api>=1.9.0",
]
